# fedora-budgie-desktop-defaults

./: .gitignore  README.md  meson.build
budgie/: com.solus-project.budgie-menu.gschema.override  com.solus-project.icon-tasklist.gschema.override  meson.build  org.buddiesofbudgie.budgie-desktop-view.gschema.override
gnome/: meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.gedit.preferences.editor.gschema.override
lightdm/: meson.build  x.dm.slick-greeter.gschema.override
scripts/: mkrelease.sh
